--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-custom-roulette",
+  "name": "react-spin",
   "version": "1.2.0",
   "description": "Customizable React roulette wheel with spinning animation",
   "main": "./dist/bundle.js",
